--- a/project_webmap.html
+++ b/project_webmap.html
@@ -114,7 +114,6 @@
       }
     });
 
-
   });
 
   var popup = new mapboxgl.Popup();
@@ -138,16 +137,46 @@
 
   map.on('click', function (e) {
     // nearest hospital from school
-    var schoolFeatures = map.queryRenderedFeatures(e.point, {
-      layers: ['school']
+    // var schoolFeatures = map.queryRenderedFeatures(e.point, {
+    //   layers: ['school']
+    // });
+    // if (!schoolFeatures.length) {
+    //   return;
+    // }
+    //
+    // var nearestHospital = turf.nearest(schoolFeatures[0], hospital);
+    //
+    // if (nearestHospital != null) {
+    //   map.getSource('nearest-hospital').setData({
+    //     'type': 'FeatureCollection',
+    //     'features': [nearestHospital]
+    //   });
+    //
+    //   map.addLayer(
+    //     {
+    //       id: 'nearest-hospital',
+    //       type: 'circle',
+    //       source: 'nearest-hospital',
+    //       paint: {
+    //         'circle-radius': 14,
+    //         'circle-color': '#ff0000'
+    //       }
+    //     },
+    //     'hospitals'
+    //   );
+    // }
+
+    // nearest school and hospital from intermediate point
+    var intermFeatures = map.queryRenderedFeatures(e.point, {
+      layers: ['interm1']
     });
-    if (!schoolFeatures.length) {
+    if (!intermFeatures.length) {
       return;
     }
 
-    var schoolFeature = schoolFeatures[0];
+    var nearestHospital = turf.nearest(intermFeatures[0], hospital);
 
-    var nearestHospital = turf.nearest(schoolFeature, hospital);
+    var nearestSchool = turf.nearest(intermFeatures[0], school);
 
     if (nearestHospital != null) {
       map.getSource('nearest-hospital').setData({
@@ -169,18 +198,6 @@
       );
     }
 
-    // nearest school from hospital
-    var hospitalFeatures = map.queryRenderedFeatures(e.point, {
-      layers: ['hospitals']
-    });
-    if (!hospitalFeatures.length) {
-      return;
-    }
-
-    var hospitalFeature = hospitalFeatures[0];
-
-    var nearestSchool = turf.nearest(hospitalFeature, school);
-
     if (nearestSchool != null) {
       map.getSource('nearest-school').setData({
         'type': 'FeatureCollection',
@@ -194,44 +211,12 @@
           source: 'nearest-school',
           paint: {
             'circle-radius': 14,
-            'circle-color': '#8B0000'
+            'circle-color': '#7F00FF'
           }
         },
         'school'
       );
     }
-
-    // nearest hospital from intermediate point
-    // var intermFeatures = map.queryRenderedFeatures(e.point, {
-    //   layers: ['interm1']
-    // });
-    // if (!intermFeatures.length) {
-    //   return;
-    // }
-    //
-    // var intermFeature = intermFeatures[0];
-    //
-    // var nearestHospital = turf.nearest(intermFeature, hospital);
-    //
-    // if (nearestHospital != null) {
-    //   map.getSource('nearest-hospital').setData({
-    //     'type': 'FeatureCollection',
-    //     'features': [nearestHospital]
-    //   });
-    //
-    //   map.addLayer(
-    //     {
-    //       id: 'nearest-hospital',
-    //       type: 'circle',
-    //       source: 'nearest-hospital',
-    //       paint: {
-    //         'circle-radius': 14,
-    //         'circle-color': '#2F4F4F'
-    //       }
-    //     },
-    //     'hospitals'
-    //   );
-    // }
 
   });
 
@@ -261,7 +246,6 @@
   map.on('load', go);
   map.on('click', go);
   map.on('dblclick', addpoint);
-  // map.on('click', nearest);
 
   function go(e) {
     if (e.type === 'click' && !start) start = [e.lngLat.lng, e.lngLat.lat];
@@ -341,40 +325,6 @@
       });
     }
   }
-
-  // function nearest(e) {
-  //   // nearest school from hospital
-  //   var hospitalFeatures = map.queryRenderedFeatures(e.point, {
-  //     layers: ['hospitals']
-  //   });
-  //   if (!hospitalFeatures.length) {
-  //     return;
-  //   }
-  //
-  //   var hospitalFeature = hospitalFeatures[0];
-  //
-  //   var nearestSchool = turf.nearest(hospitalFeature, school);
-  //
-  //   if (nearestSchool != null) {
-  //     map.getSource('nearest-school').setData({
-  //       'type': 'FeatureCollection',
-  //       'features': [nearestSchool]
-  //     });
-  //
-  //     map.addLayer(
-  //       {
-  //         id: 'nearest-school',
-  //         type: 'circle',
-  //         source: 'nearest-school',
-  //         paint: {
-  //           'circle-radius': 14,
-  //           'circle-color': '#8B0000'
-  //         }
-  //       },
-  //       'school'
-  //     );
-  //   }
-  // }
 
   function requestProfiles() {
     var queue = d3.queue();
