--- a/project_webmap.html
+++ b/project_webmap.html
@@ -15,6 +15,13 @@
   rel="stylesheet"
   />
   <script src="https://api.mapbox.com/mapbox.js/plugins/turf/v3.0.11/turf.min.js"></script>
+  
+  <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+  <script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
+  <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
+  
   <style>
   body { margin:0; padding:0; }
   #map { position:absolute; top:0; bottom:0; width:100%; }
@@ -34,6 +41,8 @@
   <div id='map'></div>
   <div class='clearfix contain'>
     <div class='pin-topright space-right2 space-top2 width28 pad2x pad1y round fill-white'>
+      <button onclick="addlayer()">Add incident Layer</button>
+      <button><a href="project_webmap.html">Remove Layer</a></button>
       <div class='small pad2y keyline-bottom'>
         <div class='fill-cyan dark space-top1_5 fl pad0 center dot'> <span class='icon car' /></div>
         <div class='strong space-left4'>Driving directions</div>
@@ -561,7 +570,16 @@
     nearestPolice = null;
     nearestArt = null;
   }
-
+  
+  function addlayer(){
+    var map = new mapboxgl.Map({
+      container: 'map',
+      style: 'mapbox://styles/petershen/ckm40z28d11we17ljhfjyxx90',
+      center: [-114.0719, 51.0447],
+      zoom: 13,
+      hash: true
+    });
+  }
 </script>
 </body>
 </html>
