--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 
-	<title>buiding permits map</title>
+	<title>final project map</title>
 	<link rel="stylesheet" href="stylesheet.css" />
 	<meta charset="utf-8" />
 	<script type="text/javascript" src="index.js"></script>
