--- a/project_webmap.html
+++ b/project_webmap.html
@@ -45,17 +45,17 @@
       <button><a href="project_webmap.html">Remove Layer</a></button>
       <div class='small pad2y keyline-bottom'>
         <div class='fill-cyan dark space-top1_5 fl pad0 center dot'> <span class='icon car' /></div>
-        <div class='strong space-left4'>Driving directions</div>
+        <div class='strong space-left4'>Trajectory Route 1</div>
         <div class='quiet space-left4'>Routes on the fastest roads and around traffic.</div>
       </div>
       <div class='small pad2y keyline-bottom'>
         <div class='fl space-top1_5 pad0 fill-mustard dark center dot'> <span class='icon walk' /></div>
-        <div class='strong space-left4'>Walking directions</div>
+        <div class='strong space-left4'>Trajectory Route 2</div>
         <div class='quiet space-left4'>Finds the shortest path using sidewalks and trails.</div>
       </div>
       <div class='small pad2y'>
         <div  class='fl space-top1_5 pad0 fill-green dark center dot'> <span class='icon bike' /></div>
-        <div class='strong space-left4'>Cycling directions</div>
+        <div class='strong space-left4'>Trajectory Route 3</div>
         <div class='quiet space-left4'>Chooses the safest routes by favoring streets with bike lanes.</div>
       </div>
     </div>
