--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@ ul,li{
 
 <body>
 
-<br><h1> Map - City of Calgary </h1></br><hr>
+<br><h1> Map - City of Calgary </h1><hr>
 <p></p>
 
 <!-- <table>
