--- a/project_webmap.html
+++ b/project_webmap.html
@@ -462,7 +462,7 @@
         'layout': {},
         'paint': {
           'circle-radius': 10,
-          'circle-color': profiles.driving.color
+          'circle-color': profiles.walking.color
         }
       });
     }
